corrected "align-item" to "text-align" based off solutin.css

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,6 +1,6 @@
 .container .text {
     background-color: yellow;
     color: red;
-    align-items: center;
+    text-align: center;
     font-size: 20px;
 }
